--- a/css/style.css
+++ b/css/style.css
@@ -1,48 +1,201 @@
+/*
+** FONT **
+*/
+
+@import url('https://fonts.googleapis.com/css?family=Zilla+Slab:400,700');
+@import url('https://fonts.googleapis.com/css?family=Roboto:400,700');
+/*
+** COLOR
+orange: #e4a93c;
+blue: #4884c4;
+grey: #999;
+*/
+
 /* http://meyerweb.com/eric/tools/css/reset/
    v2.0 | 20110126
    License: none (public domain)
 */
 
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed,
-figure, figcaption, footer, header, hgroup,
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
-	margin: 0;
-	padding: 0;
-	border: 0;
-	font-size: 100%;
-	font: inherit;
-	vertical-align: baseline;
+html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
+  box-sizing: border-box;
 }
+
 /* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure,
-footer, header, hgroup, menu, nav, section {
-	display: block;
+
+article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
+  display: block;
 }
+
 body {
-	line-height: 1;
+  line-height: 1;
+  font-family: 'Roboto', sans-serif;
 }
+
 ol, ul {
-	list-style: none;
+  list-style: none;
 }
+
 blockquote, q {
-	quotes: none;
+  quotes: none;
 }
-blockquote:before, blockquote:after,
-q:before, q:after {
-	content: '';
-	content: none;
+
+blockquote:before, blockquote:after, q:before, q:after {
+  content: '';
+  content: none;
 }
+
 table {
-	border-collapse: collapse;
-	border-spacing: 0;
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+
+/*
+** COMMON
+*/
+
+h1 {
+  font-family: 'Zilla Slab', serif;
+  font-size: 2.5rem;
+  font-weight: 700;
+  color: #e4a93c;
+}
+
+h2 {
+  font-size: 1.8rem;
+  font-weight: 700;
+  color: #999;
+}
+
+h3 {
+  font-size: 1.2rem;
+}
+
+img {
+  display: block;
+  margin: 0 auto;
+  max-width: 100%;
+  width: 100%;
+}
+
+/*
+** HEADER
+*/
+
+.wrapper {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  padding: 10px;
+}
+
+@media screen and (min-width: 1100px) {
+  .wrapper {
+    width: 1100px;
+    margin: 0 auto;
+  }
+}
+
+header {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  border-bottom: 2px solid #4884c4;
+  padding-bottom: 1rem;
+}
+
+header .logo {
+  margin: 0 auto 0.5rem;
+}
+
+header .logo img {
+  height: 4.5rem;
+}
+
+@media screen and (min-width: 750px) {
+  header {
+    flex-direction: row;
+    text-align: right;
+    justify-content: space-between;
+    padding-left: 1rem;
+    padding-right: 1rem;
+    align-items: center;
+  }
+  header .logo {
+    margin: 0;
+  }
+}
+
+header .heading h1 {
+  margin-bottom: 0.1rem;
+}
+
+header .heading span {
+  font-size: 1.2rem;
+  color: #4884c4;
+  display: block;
+}
+
+/*
+** MAIN
+*/
+
+main {
+  width: 100%;
+}
+
+main h2 {
+  margin-left: 1rem;
+}
+
+.hero__img {
+  margin: 2rem 0;
+  overflow: hidden;
+  position: relative;
+}
+
+.hero__img img {
+  min-width: 450px;
+  margin: 0 auto;
+}
+
+.item__container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.item__container>* {
+  flex: 1 100%;
+}
+
+@media screen and (min-width: 750px) {
+  .item__container>* {
+    flex: 2 50%;
+  }
+}
+
+@media screen and (min-width: 1000px) {
+  .item__container>* {
+    flex: 3 calc(100% / 3);
+  }
+}
+
+.item {
+  padding: 1rem;
+}
+
+.item__text {
+  text-align: center;
+  margin-top: 1rem;
+}
+
+.item__text h3 {
+  margin-bottom: 0.5rem;
 }
