--- a/css/style.css
+++ b/css/style.css
@@ -6,8 +6,8 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto:400,700');
 /*
 ** COLOR
-orange: #e4a93c;
-blue: #4884c4;
+orange: #fbaf2d;
+blue: #2d92fb;
 grey: #999;
 */
 
@@ -63,7 +63,7 @@ h1 {
   font-family: 'Zilla Slab', serif;
   font-size: 2.5rem;
   font-weight: 700;
-  color: #e4a93c;
+  color: #fbaf2d;
 }
 
 h2 {
@@ -106,7 +106,7 @@ header {
   display: flex;
   flex-direction: column;
   text-align: center;
-  border-bottom: 2px solid #4884c4;
+  border-bottom: 2px solid #2d92fb;
   padding-bottom: 1rem;
 }
 
@@ -138,7 +138,7 @@ header .heading h1 {
 
 header .heading span {
   font-size: 1.2rem;
-  color: #4884c4;
+  color: #2d92fb;
   display: block;
 }
 
@@ -152,7 +152,7 @@ main {
 
 main h2 {
   padding-left: 1rem;
-  border-bottom: 2px solid #4884c4;
+  border-bottom: 2px solid #2d92fb;
   margin-bottom: 1rem;
   padding-bottom: 1rem;
   text-align: center;
@@ -175,11 +175,20 @@ main h2 {
   margin: 0 auto;
 }
 
+#cat {
+  height: 200px;
+}
+
+#city {
+  height: 200px;
+  width: auto;
+}
+
 .item__container {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  border-bottom: 2px solid #4884c4;
+  border-bottom: 2px solid #2d92fb;
   padding-bottom: 1rem;
   margin-bottom: 2rem;
 }
