--- a/css/style.css
+++ b/css/style.css
@@ -7,8 +7,7 @@
 /*
 ** COLOR
 orange: #fbaf2d;
-blue: #2d92fb;
-grey: #999;
+blue: #3281d9;
 */
 
 /* http://meyerweb.com/eric/tools/css/reset/
@@ -69,7 +68,7 @@ h1 {
 h2 {
   font-size: 1.8rem;
   font-weight: 700;
-  color: #999;
+  color: #3281d9;
 }
 
 h3 {
@@ -81,6 +80,14 @@ img {
   margin: 0 auto;
   max-width: 100%;
   width: 100%;
+}
+
+a, a:link, a:visited, a:focus {
+  color: #3281d9;
+}
+
+a:hover {
+  color: #fbaf2d;
 }
 
 /*
@@ -106,7 +113,7 @@ header {
   display: flex;
   flex-direction: column;
   text-align: center;
-  border-bottom: 2px solid #2d92fb;
+  border-bottom: 2px solid #3281d9;
   padding-bottom: 1rem;
 }
 
@@ -138,7 +145,7 @@ header .heading h1 {
 
 header .heading span {
   font-size: 1.2rem;
-  color: #2d92fb;
+  color: #3281d9;
   display: block;
 }
 
@@ -152,7 +159,7 @@ main {
 
 main h2 {
   padding-left: 1rem;
-  border-bottom: 2px solid #2d92fb;
+  border-bottom: 2px solid #3281d9;
   margin-bottom: 1rem;
   padding-bottom: 1rem;
   text-align: center;
@@ -184,11 +191,15 @@ main h2 {
   width: auto;
 }
 
+#paint {
+  height: 200px;
+}
+
 .item__container {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  border-bottom: 2px solid #2d92fb;
+  border-bottom: 2px solid #3281d9;
   padding-bottom: 1rem;
   margin-bottom: 2rem;
 }
