--- a/css/style.css
+++ b/css/style.css
@@ -16,42 +16,42 @@ blue: #3281d9;
 */
 
 html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {
-  margin: 0;
-  padding: 0;
-  border: 0;
-  font-size: 100%;
-  font: inherit;
-  vertical-align: baseline;
-  box-sizing: border-box;
+      margin: 0;
+      padding: 0;
+      border: 0;
+      font-size: 100%;
+      font: inherit;
+      vertical-align: baseline;
+      box-sizing: border-box;
 }
 
 /* HTML5 display-role reset for older browsers */
 
 article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
-  display: block;
+      display: block;
 }
 
 body {
-  line-height: 1;
-  font-family: 'Roboto', sans-serif;
+      line-height: 1;
+      font-family: 'Roboto', sans-serif;
 }
 
 ol, ul {
-  list-style: none;
+      list-style: none;
 }
 
 blockquote, q {
-  quotes: none;
+      quotes: none;
 }
 
 blockquote:before, blockquote:after, q:before, q:after {
-  content: '';
-  content: none;
+      content: '';
+      content: none;
 }
 
 table {
-  border-collapse: collapse;
-  border-spacing: 0;
+      border-collapse: collapse;
+      border-spacing: 0;
 }
 
 /*
@@ -59,35 +59,35 @@ table {
 */
 
 h1 {
-  font-family: 'Zilla Slab', serif;
-  font-size: 2.5rem;
-  font-weight: 700;
-  color: #fbaf2d;
+      font-family: 'Zilla Slab', serif;
+      font-size: 2.5rem;
+      font-weight: 700;
+      color: #fbaf2d;
 }
 
 h2 {
-  font-size: 1.8rem;
-  font-weight: 700;
-  color: #3281d9;
+      font-size: 1.8rem;
+      font-weight: 700;
+      color: #3281d9;
 }
 
 h3 {
-  font-size: 1.2rem;
+      font-size: 1.2rem;
 }
 
 img {
-  display: block;
-  margin: 0 auto;
-  max-width: 100%;
-  width: 100%;
+      display: block;
+      margin: 0 auto;
+      max-width: 100%;
+      width: 100%;
 }
 
 a, a:link, a:visited, a:focus {
-  color: #3281d9;
+      color: #3281d9;
 }
 
 a:hover {
-  color: #fbaf2d;
+      color: #fbaf2d;
 }
 
 /*
@@ -95,58 +95,87 @@ a:hover {
 */
 
 .wrapper {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  padding: 10px;
+      display: flex;
+      flex-direction: row;
+      flex-wrap: wrap;
+      padding: 10px;
 }
 
 @media screen and (min-width: 1100px) {
-  .wrapper {
-    width: 1100px;
-    margin: 0 auto;
-  }
+      .wrapper {
+            width: 1100px;
+            margin: 0 auto;
+      }
 }
 
 header {
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  text-align: center;
-  border-bottom: 2px solid #3281d9;
-  padding-bottom: 1rem;
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+      text-align: center;
+      border-bottom: 2px solid #3281d9;
+      padding-bottom: 1rem;
 }
 
 header .logo {
-  margin: 0 auto 0.5rem;
+      margin: 0 auto 0.5rem;
 }
 
 header .logo img {
-  height: 4.5rem;
+      height: 4.5rem;
 }
 
 @media screen and (min-width: 750px) {
-  header {
-    flex-direction: row;
-    text-align: right;
-    justify-content: space-between;
-    padding-left: 1rem;
-    padding-right: 1rem;
-    align-items: center;
-  }
-  header .logo {
-    margin: 0;
-  }
+      header {
+            flex-direction: row;
+            text-align: right;
+            justify-content: space-between;
+            padding-left: 1rem;
+            padding-right: 1rem;
+            align-items: center;
+      }
+      header .logo {
+            margin: 0;
+      }
 }
 
 header .heading h1 {
-  margin-bottom: 0.1rem;
+      margin-bottom: 0.1rem;
 }
 
 header .heading span {
-  font-size: 1.2rem;
-  color: #3281d9;
-  display: block;
+      font-size: 1.2rem;
+      color: #3281d9;
+      display: block;
+}
+
+/*
+** CONTENT
+*/
+
+.content h2 {
+      padding-left: 1rem;
+      border-bottom: 2px solid #3281d9;
+      margin-bottom: 1rem;
+      padding-bottom: 1rem;
+      text-align: center;
+}
+
+@media screen and (min-width: 750px) {
+      .content h2 {
+            text-align: left;
+      }
+}
+
+.hero-img {
+      margin: 2rem 0;
+      overflow: hidden;
+      position: relative;
+}
+
+.hero-img img {
+      min-width: 450px;
+      margin: 0 auto;
 }
 
 /*
@@ -154,83 +183,58 @@ header .heading span {
 */
 
 main {
-  width: 100%;
-}
-
-main h2 {
-  padding-left: 1rem;
-  border-bottom: 2px solid #3281d9;
-  margin-bottom: 1rem;
-  padding-bottom: 1rem;
-  text-align: center;
-}
-
-@media screen and (min-width: 750px) {
-  main h2 {
-    text-align: left;
-  }
-}
-
-.hero__img {
-  margin: 2rem 0;
-  overflow: hidden;
-  position: relative;
-}
-
-.hero__img img {
-  min-width: 450px;
-  margin: 0 auto;
+      width: 100%;
 }
 
 #cat {
-  height: 200px;
+      height: 200px;
 }
 
 #city {
-  height: 200px;
-  width: auto;
+      height: 200px;
+      width: auto;
 }
 
 #paint {
-  height: 200px;
+      height: 200px;
 }
 
-.item__container {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  border-bottom: 2px solid #3281d9;
-  padding-bottom: 1rem;
-  margin-bottom: 2rem;
+.item-container {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      border-bottom: 2px solid #3281d9;
+      padding-bottom: 1rem;
+      margin-bottom: 2rem;
 }
 
-.item__container>* {
-  flex: 1 100%;
+.item-container>* {
+      flex: 1 100%;
 }
 
 @media screen and (min-width: 750px) {
-  .item__container>* {
-    flex: 2 50%;
-  }
+      .item-container>* {
+            flex: 2 50%;
+      }
 }
 
 @media screen and (min-width: 1100px) {
-  .item__container>* {
-    flex: 3 calc(100% / 3);
-  }
+      .item-container>* {
+            flex: 3 calc(100% / 3);
+      }
 }
 
 .item {
-  padding: 1rem;
+      padding: 1rem;
 }
 
-.item__text {
-  text-align: center;
-  margin-top: 1rem;
+.item-text {
+      text-align: center;
+      margin-top: 1rem;
 }
 
-.item__text h3 {
-  margin-bottom: 0.5rem;
+.item-text h3 {
+      margin-bottom: 0.5rem;
 }
 
 /*
@@ -238,48 +242,48 @@ main h2 {
 */
 
 footer {
-  display: flex;
-  width: 100%;
-  justify-content: center;
-  flex-direction: column;
-  padding-bottom: 2rem;
-  text-align: center;
+      display: flex;
+      width: 100%;
+      justify-content: center;
+      flex-direction: column;
+      padding-bottom: 2rem;
+      text-align: center;
 }
 
 .social {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  width: 100%;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      width: 100%;
 }
 
 @media screen and (min-width: 750px) {
-  .social {
-    flex-direction: row;
-    justify-content: space-between;
-    width: 200px;
-    margin: 0 auto;
-  }
+      .social {
+            flex-direction: row;
+            justify-content: space-between;
+            width: 200px;
+            margin: 0 auto;
+      }
 }
 
-.social__item {
-  margin-bottom: 1.5rem;
+.social-item {
+      margin-bottom: 1.5rem;
 }
 
-.social__item img {
-  width: 2rem;
+.social-item img {
+      width: 2rem;
 }
 
 .copyright {
-  padding: 2rem 3rem;
+      padding: 2rem 3rem;
 }
 
 @media screen and (min-width: 750px) {
-  .copyright {
-    padding: 1rem 0;
-  }
+      .copyright {
+            padding: 1rem 0;
+      }
 }
 
 .copyright div:first-child {
-  margin-bottom: 1rem;
+      margin-bottom: 1rem;
 }
