--- a/css/style.css
+++ b/css/style.css
@@ -250,6 +250,10 @@ header .heading span {
 ** CONTENT
 */
 
+.content {
+      width: 100%;
+}
+
 .content .section-title {
       padding-left: 1rem;
       border-bottom: 2px solid #3281d9;
